# lexilab-wordle-solver

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: tests.yml
docs/: index.html
src/lexilab/: __init__.py  benchmark.py  cli.py  feedback.py  report.py  solver.py  words.py
tests/: test_benchmark.py  test_cli.py  test_feedback.py  test_solver.py  test_words.py
